schemas/fileconf-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fileconf-pod
spec:
  containers:
  - name: hello
    image: eu.gcr.io/YOUR_PROJECT_ID/hello-node:v1
    volumeMounts:
      - name: configs
        mountPath: /etc/fileconfig
        readOnly: true
  volumes:
    - name: configs
      configMap:
        name: fileconfig
  restartPolicy: Never
