schemas/manconf-env-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: manconf-env-pod
spec:
  containers:
  - name: test-container
    image: gcr.io/google_containers/busybox
    command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never
