schemas/manconf-fs-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: manconf-fs-pod
spec:
  containers:
  - name: test-container
    image: gcr.io/google_containers/busybox
    command: [ "/bin/sh", "-c", "cat /etc/manconfig/backend.properties" ]
    volumeMounts:
      - name: configs
        mountPath: /etc/manconfig
        readOnly: true
  volumes:
    - name: configs
      configMap:
        name: manualconfig
  restartPolicy: Never
