schemas/hello-ing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-ing-service
spec:
  selector:
    name: hello
  ports:
    -
      name: endpoint
      port: 80
      targetPort: http
      protocol: TCP
  type: NodePort
