schemas/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    name: hello
  ports:
    -
      name: endpoint
      port: 80
      targetPort: http
      protocol: TCP
  type: LoadBalancer
